Tweak toolbar layout to avoid wrapping.

--- a/public/style.css
+++ b/public/style.css
@@ -163,8 +163,9 @@ a {
   flex: 1 1 0;
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   align-items: center;
+  overflow: visible;
 }
 
 #toolbar-middle {
